# multi-kb

./: .gitignore  LICENSE  README.md  start.bat
api_server/: package.json  server.js
api_server/lib/: daemon-client.js
api_server/routes/: api.js
control_panel/: index.html
input_router/: README.md  config.json  input_router.py  install_service.bat
raw_input_service/: CMakeLists.txt  README.md  build.bat  common.h  device_detector.cpp  device_detector.h  raw_input_service.cpp  socket_server.cpp  socket_server.h  test_client.py
